--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,20 +5,32 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
+    "@mui/material": "^5.2.5",
+    "@mui/utils": "^5.0.1",
+    "@mui/x-data-grid": "^5.2.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
     "recoil": "^0.5.2",
     "web-vitals": "^2.1.2"
   },
