--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "recharts": "^2.1.8",
     "recoil": "^0.5.2",
     "web-vitals": "^2.1.2"
   },
