--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://ec2-13-125-149-247.ap-northeast-2.compute.amazonaws.com:9090",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -27,11 +28,10 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
-    "react-paginate": "^8.1.0",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "react-table": "^7.7.0",
+    "react-toastify": "^8.1.0",
     "recharts": "^2.1.8",
     "recoil": "^0.5.2",
     "web-vitals": "^2.1.2"
