--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage": "http://localhost:3000",
   "private": true,
-  "proxy": "http://ec2-13-125-149-247.ap-northeast-2.compute.amazonaws.com:9090",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "http-proxy-middleware": "^2.0.1"
   }
 }
