--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-chartjs-2": "^4.0.0",
-    "react-countdown": "^2.3.2",
+    "react-countdown-circle-timer": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
     "react-router": "^6.0.2",
