--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-countdown-circle-timer": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-password-checklist": "^1.3.3",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
