--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "http://localhost:3000",
+  "proxy":"http://ec2-13-125-149-247.ap-northeast-2.compute.amazonaws.com:9090",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
