--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy":"http://ec2-13-125-149-247.ap-northeast-2.compute.amazonaws.com:9090",
+  "proxy": "http://ec2-13-125-149-247.ap-northeast-2.compute.amazonaws.com:9090",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -21,6 +21,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
     "datatables.net-dt": "^1.11.3",
