--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-toastify": "^8.1.0",
     "recharts": "^2.1.8",
     "recoil": "^0.5.2",
+    "underscore": "^1.13.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
