--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.4",
     "react-toastify": "^8.1.0",
     "recharts": "^2.1.8",
     "recoil": "^0.5.2",
