--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://ec2-13-125-149-247.ap-northeast-2.compute.amazonaws.com:9090",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -25,6 +24,8 @@
     "chart.js": "^3.6.0",
     "datatables.net-dt": "^1.11.3",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
+    "jspdf-html2canvas": "^1.4.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-chartjs-2": "^4.0.0",
